--- a/docs/style.css
+++ b/docs/style.css
@@ -128,3 +128,11 @@ h2 {
 	color: white;
 	text-shadow: 2px 2px 4px black;
 }
+
+p {
+	text-align: center;
+	font-size:100%;
+	color: white;
+	text-shadow: 2px 2px 4px black;
+
+}
